--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "hardhat-project",
   "devDependencies": {
+    "@nomicfoundation/hardhat-chai-matchers": "^1.0.6",
     "@nomiclabs/hardhat-ethers": "^2.2.1",
+    "@openzeppelin/contracts": "^4.9.3",
     "chai": "^4.3.8",
     "ethers": "^5.7.2",
     "hardhat": "^2.9.2"
