--- a/package.json
+++ b/package.json
@@ -1,9 +1,18 @@
 {
   "name": "hardhat-project",
   "devDependencies": {
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.2",
+    "@nomicfoundation/hardhat-ethers": "^3.0.4",
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@nomiclabs/hardhat-ethers": "^2.2.1",
+    "@openzeppelin/contracts": "^4.9.3",
     "chai": "^4.3.8",
     "ethers": "^5.7.2",
     "hardhat": "^2.9.2"
+  },
+  "dependencies": {
+    "@openzeppelin/cli": "^2.8.2",
+    "@openzeppelin/upgrades": "^2.8.0",
+    "openzeppelin-solidity": "^3.4.2"
   }
 }
