--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   },
   "dependencies": {
     "@openzeppelin/merkle-tree": "^1.0.5",
+    "express": "^4.18.2",
     "merkletreejs": "^0.3.10"
+  },
+  "scripts": {
+    "EIP712":"node server.js"
   }
 }
