--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "openzeppelin-contracts-06": "npm:@openzeppelin/contracts@3.4.2"
   },
   "dependencies": {
+    "@chainlink/contracts": "^0.8.0",
     "@openzeppelin/merkle-tree": "^1.0.5",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
     "express": "^4.18.2",
     "merkletreejs": "^0.3.10"
   },
   "scripts": {
-    "EIP712":"node server.js"
+    "EIP712": "node server.js"
   }
 }
